# eln_structurer

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: suzuki_coupling.txt
scripts/: setup_bench_envs.sh
src/eln_structurer/: __init__.py  agent.py  chemistry.py  cli.py  config.py  critic.py  harness.py  preprocess.py  prompts.py  proto_bridge.py  reaction_class.py  schema.py  solvents.py  text_utils.py
src/eln_structurer/benchmarks/: __init__.py  canonical.py  compare.py  runner.py  scoring.py
src/eln_structurer/benchmarks/adapters/: __init__.py  base.py  eln.py  naive_llm.py  openchemie.py  paragraph2actions.py
src/eln_structurer/critic/: __init__.py  models.py  prompt.py  runner.py
src/eln_structurer/predict/: __init__.py  agent.py  agent_prompts.py  composition.py  confidence.py  corpus.py  dft_lookup.py  fingerprint.py  greenness.py  hte_corpus.py  insilico.py  proposer.py  ranker.py  retrieval.py  risks.py  skeleton.py  yield_model.py
src/eln_structurer/prompts/: __init__.py  examples.py  schema.py  template.py
src/eln_structurer/rules/: __init__.py  base.py  class_specific.py  completeness.py  compound_utils.py  numeric_grounding.py  ordering.py  stoichiometry.py  structure.py
src/eln_structurer/tools/: __init__.py  compute_mw.py  core.py  detect_reaction_class.py  expand_abbreviation.py  finalize_reaction.py  predict_tools.py  validate_reaction.py  validate_smiles.py  verify_quote.py
tests/: _sdk_stub.py  conftest.py  test_agent_e2e.py  test_agent_robustness.py  test_agent_stubbed.py  test_bench_compare.py  test_benchmarks.py  test_class_rule_false_positives.py  test_cli.py  test_enum_drift.py  test_hardening.py  test_harness.py  test_loop_state.py  test_numeric_grounding.py  test_predict.py  test_predict_agent.py  test_predict_composition.py  test_predict_insilico.py  test_predict_proposer.py  test_predict_ranking.py  test_preprocess.py  test_prompts.py  test_proto_bridge.py  test_reaction_class.py  test_repair_prompt_snapshot.py  test_rules_completeness.py  test_rules_ordering.py  test_rules_phase3_coverage.py  test_rules_stoichiometry.py  test_rules_structure.py  test_schema.py  test_tools.py
tests/fixtures/golden/: amide_coupling.gold.json  aspirin.gold.json  boc_deprotection.gold.json  buchwald_hartwig.gold.json  dmp_oxidation.gold.json  grignard.gold.json  reductive_amination.gold.json  suzuki_coupling.gold.json
tests/fixtures/paragraphs/: amide_coupling.txt  aspirin.txt  boc_deprotection.txt  buchwald_hartwig.txt  dmp_oxidation.txt  grignard.txt  reductive_amination.txt
tests/snapshots/: repair_prompt_aspirin_missing_reactant.txt
(+1 files in other folders)
